# redash-mcp-rs

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
.claude/skills/commit/: SKILL.md
.claude/skills/release-management/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  progress.rs  prompts.rs  redash.rs  resources.rs
src/http/: auth.rs  cors.rs  handler.rs  health.rs  mod.rs  request.rs  response.rs  router.rs  server.rs  session.rs  sse.rs
src/tools/: alerts.rs  common.rs  dashboards.rs  data_sources.rs  destinations.rs  favorites.rs  mod.rs  queries.rs  query_results.rs  snippets.rs  users.rs  visualizations.rs  widgets.rs
tests/: http_integration.rs  mcp_integration.rs
