[package]
name = "redash-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nick Nizovtsev <nizovtsevnv@gmail.com>"]
description = "MCP server for Redash analytics integration"
license = "MIT"
repository = "https://github.com/nizovtsevnv/redash-mcp-rs"
homepage = "https://github.com/nizovtsevnv/redash-mcp-rs"
keywords = ["mcp", "redash", "ai", "assistant", "analytics"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"
rust-version = "1.75"
exclude = [
    "target/",
    ".github/",
]

[[bin]]
name = "redash-mcp"
path = "src/main.rs"

# Platform-specific dependencies to handle threading differences
[target.'cfg(not(windows))'.dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "io-util", "io-std", "macros", "sync", "signal", "time"], default-features = false }

[target.'cfg(windows)'.dependencies]
tokio = { version = "1.0", features = ["rt", "net", "io-util", "io-std", "macros", "sync", "signal", "time"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "io-util", "io-std", "macros", "sync", "signal", "time"], default-features = false }

[dependencies]
tokio = { version = "1.0", features = ["rt", "net", "io-util", "io-std", "macros", "sync", "signal", "time"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.6", features = ["http1", "server"], default-features = false }
hyper-util = { version = "0.1", features = ["tokio", "http1"], default-features = false }
http-body-util = "0.1"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"], default-features = false }
serde_json = "1.0"
url = "2.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }
dotenvy = "0.15"
thiserror = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true
lto = false

[features]
default = []
